# Omega

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/data/: communication.rs
src/server/: api.rs  mod.rs  omikron_connection.rs  omikron_manager.rs  server.rs  short_link.rs  socket.rs
src/sql/: connection_status.rs  iota_omikron_tracker.rs  mod.rs  sql.rs  user_online_tracker.rs
src/transport/: mod.rs  omikron_connection.rs  omikron_manager.rs
src/util/: crypto_helper.rs  crypto_util.rs  file_util.rs  logger.rs  mod.rs
